--- a/_posts/2018-05-19-[피아노 레슨__01].md
+++ b/_posts/2018-05-19-[피아노 레슨__01].md
@@ -1,14 +1,16 @@
 ---
 layout: post
-title: "[피아노 레슨__01]"
+title: "[피아노 일지]"
 description: "페달, 코드"
-date: 2018-05-19
+date: 2018-07-15
 tags: [페달, 코드]
 comments: true
 share: true
 ---
 
-# 피아노 레슨__01
+<details>
+<summary> 피아노 레슨__01( 18.05.19)</summary>
+
 
 > 배운 내용
 
@@ -52,5 +54,100 @@ share: true
 |||||||||||||
 
 
+</details>
 
 
+
+<details>
+<summary> 피아노 레슨__02( 18.06.09)</summary>
+
+# 피아노 레슨__02
+
+> 배운 내용
+
+1. 운지법
+2. 손목사용
+3. 코드분석
+
+## 운지법
+
+> 다음에 올 `음`을 보며 손의 위치를 사용한다.
+
+## 손목사용
+
+> 손목이 비틀리지 않게한다.
+
+` Db | Eb | Gb | Ab | Bb `와 같이 검은건반이 요구되는 코드를 칠 때 손을 건반의 상단부터 손 자체를 올린다.
+
+## 코드분석
+
+멜로디: 보통 오른손
+베이스: 보통 왼손
+
+`베이스를 기준`으로 코드를 부여하자.
+
+## 부족한 점
+
+> 계이름표를 봤을 때 무슨 음인지 한 참 생각함
+
+해결방안: 반복학습
+
+> 코드를 봤을 때  어떤 코드들이 속해있는지 생각 안남
+  
+`탑노트`를 기준으로 손의 위치가 변경될 수 있다.
+해결방안: 1, 3, 5음을 반복해서 숙달하자.  
+
+</details>
+
+
+<details>
+<summary> 피아노 레슨__03( 18.06.16)</summary>
+
+# 피아노 레슨__03
+
+> 배운 내용
+
+1. 박자
+2. 음표
+3. 조표
+
+## 박자
+
+> 조표앞 박자표시를 보고 시작한다.
+
+## 음표  
+
+> 음표를 보고 피아노에 반영 할 수 있어야한다.  
+
+
+
+## 조표
+
+박자 표시 전 음악의 전체 음정을 나타내는 부분
+
+
+## 부족한 점
+
+> 음표를 보고 박자에 맞추어 연주
+
+해결방안: 반복학습
+
+</details>  
+
+<details>
+<summary> 피아노 레슨__04( 18.06.23)</summary>
+
+
+</details>  
+
+<details>
+<summary> 피아노 레슨__05( 18.06.30)</summary>  
+</details>  
+
+<details>
+<summary> 피아노 레슨__06( 18.07.07)</summary>
+</details>  
+
+<details>
+<summary> 피아노 레슨__07( 18.07.14)</summary>
+</details>  
