--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -8,27 +8,36 @@ comments: true
 share: true
 ---
 
-<details>
-<summary> 피아노 레슨__01( 18.05.19)</summary>
+# 목차
+1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
+1. [피아노 레슨 2(18.06.09)운지법, 손목사용, 코드분석](#피아노-레슨-2(18.06.09)운지법,-손목사용,-코드분석)
+1. [피아노 레슨 3(18.06.16)박자, 음표, 조표](#피아노-레슨-3(18.06.16)박자,-음표,-조표)
+1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
+1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
+1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
+1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
+1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
 
 
-> 배운 내용
+1. 피아노 레슨(18.05.19)페달, 코드  
 
-1. 페달
-2. 코드
+> 배운 내용  
 
-## 페달
+1. 페달  
+2. 코드  
 
-> 사용은 언제?
+## 페달  
 
-- 소리연결, 강조할 때
+> 사용은 언제?  
 
-1. 코드 바뀔 때
-2. 마디 바뀔 때
+- 소리연결, 강조할 때  
 
-> 어떻게 사용?
+1. 코드 바뀔 때  
+2. 마디 바뀔 때  
 
-단순하게 생각하자.
+> 어떻게 사용?  
+
+단순하게 생각하자.  
 
 ```js
 [복잡] 손치면서 발치는것
@@ -54,12 +63,12 @@ share: true
 |||||||||||||
 
 
-</details>
 
 
 
-<details>
-<summary> 피아노 레슨__02( 18.06.09)</summary>
+
+
+2. 피아노 레슨__02(18.06.09)  
 
 # 피아노 레슨__02
 
@@ -97,11 +106,11 @@ share: true
 `탑노트`를 기준으로 손의 위치가 변경될 수 있다.
 해결방안: 1, 3, 5음을 반복해서 숙달하자.  
 
-</details>
 
 
-<details>
-<summary> 피아노 레슨__03( 18.06.16)</summary>
+
+
+피아노 레슨 3(18.06.16)
 
 # 피아노 레슨__03
 
@@ -136,6 +145,29 @@ share: true
 
 <details>
 <summary> 피아노 레슨__04( 18.06.23)</summary>
+
+> 배운내용  
+
+1. 비트를 구별해야한다.  
+2. slash chord  
+
+# 비트 구별  
+
+8분음표, 4분음표, 2분음표, 온음표 음표의 구분을 명확하게 두어야함.  
+
+
+# slash chord  
+
+`B/F` B: 오른손, F: 왼손  
+ 
+> 문제점  
+
+8비트, 16비트를 구별하는 기점이 모호하다.  
+
+ 
+> 해결방안  
+
+메트로놈에 맞춰 교정  
 
 
 </details>  
