--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -108,8 +108,6 @@ share: true
 
 
 
-
-
 피아노 레슨 3(18.06.16)
 
 # 피아노 레슨__03
@@ -139,12 +137,10 @@ share: true
 
 > 음표를 보고 박자에 맞추어 연주
 
-해결방안: 반복학습
+해결방안: 반복학습  
 
-</details>  
 
-<details>
-<summary> 피아노 레슨__04( 18.06.23)</summary>
+피아노 레슨 4(18.06.23) 비트 구별, 슬래시 코드  
 
 > 배운내용  
 
@@ -170,16 +166,50 @@ share: true
 메트로놈에 맞춰 교정  
 
 
-</details>  
+피아노 레슨 5(18.06.30) 비트구분 확실하게, 기다리다(윤하) 
 
-<details>
-<summary> 피아노 레슨__05( 18.06.30)</summary>  
-</details>  
+> 배운내용    
 
-<details>
-<summary> 피아노 레슨__06( 18.07.07)</summary>
-</details>  
+1. 8, 16 비트의 구분성이 없음.
+2. 기다리다(윤하).  
 
-<details>
-<summary> 피아노 레슨__07( 18.07.14)</summary>
-</details>  
+> 문제점  
+
+연습의 부재로 곡이 제대로 표현이 안되 저번주 교육받은 비트의 구분이 없었다.  
+
+
+
+피아노 레슨 6(18.07.07) sus4
+
+> 배운내용  
+
+1. Sus4  
+2. 전체 교정  
+
+# Sus4  
+
+화음은 기본적으로 1, 3, 5도로 이루어지는반면 
+Sus4는 1, 4, 5도를 쳐야한다.  
+
+
+
+
+피아노 레슨 7(18.07.14) CM7, 하농 
+
+> 배운내용  
+
+1. 메이져세븐 코드  
+2. 하농  
+
+# 메이져세븐 
+
+화음에 으뜸음의 한 옥타브가 높은 건반에서 반음을 내린것과 같이 친다.
+ex) CM7: C E G + B(C에서 반음 내린것.)  
+
+# 하농  
+
+자세, 손가락의 균등한 힘 리듬감 등.. 종합적으로 워밍업 하기 좋은 연습법.  
+
+  
+
+
