--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -3,23 +3,23 @@ layout: post
 title: "[피아노 일지]"
 description: "페달, 코드"
 date: 2018-07-15
-tags: [페달, 코드]
+tags: [피아노]
 comments: true
 share: true
 ---
 
 # 목차
-1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
-1. [피아노 레슨 2(18.06.09)운지법, 손목사용, 코드분석](#피아노-레슨-2(18.06.09)운지법,-손목사용,-코드분석)
-1. [피아노 레슨 3(18.06.16)박자, 음표, 조표](#피아노-레슨-3(18.06.16)박자,-음표,-조표)
-1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
-1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
-1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
-1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
-1. [피아노 레슨 1(18.05.19)페달, 코드](#피아노-레슨(18.05.19)페달,-코드)
+1. [피아노 레슨 1(18.05.19)페달, 코드](#레슨1)
+2. [피아노 레슨 2(18.06.09)운지법, 손목사용, 코드분석](#레슨2)
+3. [피아노 레슨 3(18.06.16)박자, 음표, 조표](#레슨3)
+4. [피아노 레슨 4(18.06.23)비트 구별, 슬래시 코드](#레슨4)
+5. [피아노 레슨 5(18.06.30)비트구분 확실하게, 기다리다(윤하)](#레슨5)
+6. [피아노 레슨 6(18.07.07)sus4](#레슨6)
+7. [피아노 레슨 7(18.07.14)CM7, 하농](#레슨7)
+8. [피아노 레슨 8(18.05.19)](#레슨8)
 
 
-1. 피아노 레슨(18.05.19)페달, 코드  
+1. 레슨1  
 
 > 배운 내용  
 
@@ -61,11 +61,6 @@ share: true
 | Cm | Dm | Em | Fm | Gm | Am | Bm | Dbm | Ebm | Gbm | Abm | Bbm |
 |:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
 |||||||||||||
-
-
-
-
-
 
 
 2. 피아노 레슨__02(18.06.09)  
@@ -177,8 +172,6 @@ share: true
 
 연습의 부재로 곡이 제대로 표현이 안되 저번주 교육받은 비트의 구분이 없었다.  
 
-
-
 피아노 레슨 6(18.07.07) sus4
 
 > 배운내용  
@@ -190,8 +183,6 @@ share: true
 
 화음은 기본적으로 1, 3, 5도로 이루어지는반면 
 Sus4는 1, 4, 5도를 쳐야한다.  
-
-
 
 
 피아노 레슨 7(18.07.14) CM7, 하농 
@@ -209,7 +200,3 @@ ex) CM7: C E G + B(C에서 반음 내린것.)
 # 하농  
 
 자세, 손가락의 균등한 힘 리듬감 등.. 종합적으로 워밍업 하기 좋은 연습법.  
-
-  
-
-
