--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -62,7 +62,7 @@ share: true
 |:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
 |||||||||||||
 
-
+[[목차바로가기]](#목차)
 
 
 # 레슨2
@@ -101,7 +101,7 @@ share: true
 `탑노트`를 기준으로 손의 위치가 변경될 수 있다.
 해결방안: 1, 3, 5음을 반복해서 숙달하자.  
 
-
+[[목차바로가기]](#목차)
 
 피아노 레슨 3(18.06.16)
 
@@ -132,8 +132,9 @@ share: true
 
 > 음표를 보고 박자에 맞추어 연주
 
-해결방안: 반복학습  
+해결방안: 반복학습    
 
+[[목차바로가기]](#목차)
 
 # 레슨4
 
@@ -160,6 +161,7 @@ share: true
 
 메트로놈에 맞춰 교정  
 
+[[목차바로가기]](#목차)
 
 # 레슨5
 
@@ -170,7 +172,9 @@ share: true
 
 > 문제점  
 
-연습의 부재로 곡이 제대로 표현이 안되 저번주 교육받은 비트의 구분이 없었다.  
+연습의 부재로 곡이 제대로 표현이 안되 저번주 교육받은 비트의 구분이 없었다.
+
+[[목차바로가기]](#목차)  
 
 # 레슨6
 
@@ -184,6 +188,7 @@ share: true
 화음은 기본적으로 1, 3, 5도로 이루어지는반면 
 Sus4는 1, 4, 5도를 쳐야한다.  
 
+[[목차바로가기]](#목차)
 
 # 레슨7 
 
@@ -200,3 +205,5 @@ ex) CM7: C E G + B(C에서 반음 내린것.)
 # 하농  
 
 자세, 손가락의 균등한 힘 리듬감 등.. 종합적으로 워밍업 하기 좋은 연습법.  
+
+[[목차바로가기]](#목차)
