--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -16,7 +16,8 @@ share: true
 5. [피아노 레슨 5(18.06.30)비트구분 확실하게, 기다리다(윤하)](#레슨5)
 6. [피아노 레슨 6(18.07.07)sus4](#레슨6)
 7. [피아노 레슨 7(18.07.14)CM7, 하농](#레슨7)
-8. [피아노 레슨 8(18.05.19)](#레슨8)
+8. [피아노 레슨 8(18.07.21)](#레슨8)
+8. [피아노 레슨 9(18.07.28)](#레슨9)
 
 
 # 레슨1  
@@ -41,6 +42,7 @@ share: true
 
 ```js
 [복잡] 손치면서 발치는것
+[단순] 손(피아노)치고 발(페달)
 [단순] 손(피아노)치고 발(페달)
 ```
 
@@ -97,7 +99,7 @@ share: true
 해결방안: 반복학습
 
 > 코드를 봤을 때  어떤 코드들이 속해있는지 생각 안남
-  
+
 `탑노트`를 기준으로 손의 위치가 변경될 수 있다.
 해결방안: 1, 3, 5음을 반복해서 숙달하자.  
 
@@ -150,12 +152,12 @@ share: true
 # slash chord  
 
 `B/F` B: 오른손, F: 왼손  
- 
+
 > 문제점  
 
 8비트, 16비트를 구별하는 기점이 모호하다.  
 
- 
+
 > 해결방안  
 
 메트로놈에 맞춰 교정  
@@ -184,25 +186,50 @@ share: true
 
 # Sus4  
 
-화음은 기본적으로 1, 3, 5도로 이루어지는반면 
+화음은 기본적으로 1, 3, 5도로 이루어지는반면
 Sus4는 1, 4, 5도를 쳐야한다.  
 
 [[목차바로가기]](#목차)
 
-# 레슨7 
+# 레슨7
 
 > 배운내용  
 
 1. 메이져세븐 코드  
 2. 하농  
 
-# 메이져세븐 
+# 메이져세븐
 
-화음에 으뜸음의 한 옥타브가 높은 건반에서 반음을 내린것과 같이 친다.
+화음에 으뜸음의 한 옥타브가 높은 건반에서 `반음`을 내린것과 같이 친다.
 ex) CM7: C E G + B(C에서 반음 내린것.)  
 
 # 하농  
 
 자세, 손가락의 균등한 힘 리듬감 등.. 종합적으로 워밍업 하기 좋은 연습법.  
 
+[[목차바로가기]](#목차)
+
+# 레슨8  
+
+> 배운내용  
+
+1. 세븐 코드  
+
+# 세븐  
+
+화음에 으뜸음의 한 옥타브가 높은 건반에서 `한음`을 내린것과 같이 친다.  
+
+ex) CM7: C E G + B플랫 (C에서 한음 내린것.)  
+
+[[목차바로가기]](#목차)
+# 레슨9  
+
+> 배운것  
+
+1. 스타카도 하농  
+2. 코드 반주와 같이 연습하기(합주)  
+
+연습을 하지못해 얻어간게 없었다.  
+연습시간을 최대한 마련할 것.  
+하루 5분이라도.
 [[목차바로가기]](#목차)
