--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -16,8 +16,8 @@ share: true
 5. [피아노 레슨 5(18.06.30)비트구분 확실하게, 기다리다(윤하)](#레슨5)
 6. [피아노 레슨 6(18.07.07)sus4](#레슨6)
 7. [피아노 레슨 7(18.07.14)CM7, 하농](#레슨7)
-8. [피아노 레슨 8(18.07.21)](#레슨8)
-8. [피아노 레슨 9(18.07.28)](#레슨9)
+8. [피아노 레슨 8(18.07.21)C7](#레슨8)
+9. [피아노 레슨 9(18.07.28)스타카토](#레슨9)
 
 
 # 레슨1  
@@ -222,6 +222,7 @@ ex) CM7: C E G + B(C에서 반음 내린것.)
 ex) CM7: C E G + B플랫 (C에서 한음 내린것.)  
 
 [[목차바로가기]](#목차)
+
 # 레슨9  
 
 > 배운것  
@@ -232,4 +233,5 @@ ex) CM7: C E G + B플랫 (C에서 한음 내린것.)
 연습을 하지못해 얻어간게 없었다.  
 연습시간을 최대한 마련할 것.  
 하루 5분이라도.
+
 [[목차바로가기]](#목차)
