--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -18,6 +18,7 @@ share: true
 7. [피아노 레슨 7(18.07.14)CM7, 하농](#레슨7)
 8. [피아노 레슨 8(18.07.21)C7](#레슨8)
 9. [피아노 레슨 9(18.07.28)스타카토](#레슨9)
+10. [피아노 레슨 9(18.08.28)피드백, 바람에 흘러가듯 칠 것](#레슨10)
 
 
 # 레슨1  
@@ -235,3 +236,17 @@ ex) CM7: C E G + B플랫 (C에서 한음 내린것.)
 하루 5분이라도.
 
 [[목차바로가기]](#목차)
+
+# 레슨10  
+
+> 배운것  
+
+1. 피드백  
+2. 바람에 흘러가듯 칠 것  
+
+| 주제 | 피드백 내용 |
+|:--:|:--:|
+| 하농 | 여러번 치는것 보단 힘을 빼고치는 연습을 한 번 이라도 제대로 하는게 중요하다. |    
+| 시대를 초월한 마음 | 왼손(베이스)에 힘이 많이 들어가 딱딱하게 들림, `바람에 흘러가듯 칠 것`. |  
+| 기다리다 | 코드연습하기에 적합, 코드를 체득하는게 중요하다. |  
+| Sunday morning | 리듬감 연습하기 좋다, 곡을 틀고 따라해보자 + 스윙: 정박을 맞추되 중간에 키를 누를 수 있다. | 
