--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -19,6 +19,7 @@ share: true
 8. [피아노 레슨 8(18.07.21)C7](#레슨8)
 9. [피아노 레슨 9(18.07.28)스타카토](#레슨9)
 10. [피아노 레슨 9(18.08.04)피드백, 바람에 흘러가듯 칠 것](#레슨10)
+10. [피아노 레슨 9(18.08.11)2,4 리듬 ](#레슨11)
 
 
 # 레슨1  
@@ -250,3 +251,20 @@ ex) CM7: C E G + B플랫 (C에서 한음 내린것.)
 | 시대를 초월한 마음 | 왼손(베이스)에 힘이 많이 들어가 딱딱하게 들림, `바람에 흘러가듯 칠 것`. |  
 | 기다리다 | 코드연습하기에 적합, 코드를 체득하는게 중요하다. |  
 | Sunday morning | 리듬감 연습하기 좋다, 곡을 틀고 따라해보자 + 스윙: 정박을 맞추되 중간에 키를 누를 수 있다. | 
+
+# 레슨11  
+
+> 배운것  
+
+1. 피드백  
+2. 박자를 2, 4에 타도록 노력할 것  
+
+| 주제 | 피드백 내용 |
+|:--:|:--:|
+| 하농 | 물에 떠있는 느낌으로 계속 진행할 것.(개인적인 생각) |    
+| 시대를 초월한 마음 | 왼손의소리가 오른손에 좀 묻힘. 바람에 흐르는 느낌이 좀 살아남. `바람에 흘러가듯 칠 것`. |  
+| 기다리다 | 코드연습하기에 적합, 코드를 체득하는게 중요하다. |  
+| Sunday morning | 치고싶은대로 한 번 쳐볼것. | 
+ 
+다른곡: 메이플스토리 OST(Raindrop flower) 연습 시작해볼까?  
+
