--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -19,7 +19,8 @@ share: true
 8. [피아노 레슨 8(18.07.21)C7](#레슨8)
 9. [피아노 레슨 9(18.07.28)스타카토](#레슨9)
 10. [피아노 레슨 9(18.08.04)피드백, 바람에 흘러가듯 칠 것](#레슨10)
-10. [피아노 레슨 9(18.08.11)2,4 리듬 ](#레슨11)
+11. [피아노 레슨 9(18.08.11)2,4 리듬 ](#레슨11)
+12. [피아노 레슨 9(18.08.18)힘빼기 ](#레슨12)
 
 
 # 레슨1  
@@ -267,4 +268,14 @@ ex) CM7: C E G + B플랫 (C에서 한음 내린것.)
 | Sunday morning | 치고싶은대로 한 번 쳐볼것. | 
  
 다른곡: 메이플스토리 OST(Raindrop flower) 연습 시작해볼까?  
+
+# 레슨 12
+
+> 배운것  
+
+기본기: 팔 전체의 힘을 빼고 손 끝에 힘을 실어 쳐야한다.  
+
+나는 팔 전체에 힘이 너무 들어가있다. 정말어려운 기본기이다.  
+
+
 
