--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -18,9 +18,15 @@ share: true
 7. [피아노 레슨 7(18.07.14)CM7, 하농](#레슨7)
 8. [피아노 레슨 8(18.07.21)C7](#레슨8)
 9. [피아노 레슨 9(18.07.28)스타카토](#레슨9)
-10. [피아노 레슨 9(18.08.04)피드백, 바람에 흘러가듯 칠 것](#레슨10)
-11. [피아노 레슨 9(18.08.11)2,4 리듬 ](#레슨11)
-12. [피아노 레슨 9(18.08.18)힘빼기 ](#레슨12)
+10. [피아노 레슨 10(18.08.04)피드백, 바람에 흘러가듯 칠 것](#레슨10)
+11. [피아노 레슨 11(18.08.11)2,4 리듬 ](#레슨11)
+12. [피아노 레슨 12(18.08.18)힘빼기 ](#레슨12)
+13. [피아노 레슨 13(18.09.08)오랜만에 복귀 ](#레슨13)
+14. [피아노 레슨 14(18.09.15)소녀, 코드(dim, aug)](#레슨14)
+15. [피아노 레슨 15(18.09.22)스케일, 아르페지오 ](#레슨15)
+16. [피아노 레슨 16(18.09.29)텐션, 연유커피같은 달달함 ](#레슨16)
+17. [피아노 레슨 16(18.10.03)고향의 봄, 동요 멜로디 + 코드 ](#레슨17)
+18. [피아노 레슨 16(18.10.09)소녀 도입부, 고향의 밤, 스케일 ](#레슨18)
 
 
 # 레슨1  
@@ -278,4 +284,30 @@ ex) CM7: C E G + B플랫 (C에서 한음 내린것.)
 나는 팔 전체에 힘이 너무 들어가있다. 정말어려운 기본기이다.  
 
 
+# 레슨 13
+# 레슨 14
+
+
+# 레슨 15
+
+> 배운것
+
+1. 스케일  
+2. 아르페지오  
+
+`스케일`은 하농의 가장 끝, 어려우며 선택적 요소. 배워두면 도움이 됨.
+`아르페지오`박자의 공간이 남을 경우 코드를 풀어서 침. 보통 1 - 5 - 7 순서로 침.
+
+# 레슨 16  
+
+> 배운것  
+
+1. 텐션(Tension)    
+| C | D | E | F | G | A | B |  
+|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
+|1-8|2-9|3-10|4-11|5-12|6-13|7|
+
+7코드에는 텐션을 붙일 수 있다.  
+
+1-3-5 >> 1#-3-5 (텐션)  
 
