--- a/_posts/2018-05-19-[피아노 레슨].md
+++ b/_posts/2018-05-19-[피아노 레슨].md
@@ -25,8 +25,12 @@ share: true
 14. [피아노 레슨 14(18.09.15)소녀, 코드(dim, aug)](#레슨14)
 15. [피아노 레슨 15(18.09.22)스케일, 아르페지오 ](#레슨15)
 16. [피아노 레슨 16(18.09.29)텐션, 연유커피같은 달달함 ](#레슨16)
-17. [피아노 레슨 16(18.10.03)고향의 봄, 동요 멜로디 + 코드 ](#레슨17)
-18. [피아노 레슨 16(18.10.09)소녀 도입부, 고향의 밤, 스케일 ](#레슨18)
+17. [피아노 레슨 17(18.10.03)고향의 봄, 동요 멜로디 + 코드 ](#레슨17)
+18. [피아노 레슨 18(18.10.09)소녀 도입부, 고향의 밤, 스케일 ](#레슨18)
+18. [피아노 레슨 18(18.10.14) ](#레슨)
+18. [피아노 레슨 18(18.10.21)아톰 리브스 시작](#레슨)
+18. [피아노 레슨 18(18.10.27)아톰 리브스 왼손 워킹, 캄핑, G, C 스케일 ](#레슨)
+18. [피아노 레슨 18(18.11.04)아톰 리브스 왼손 워킹 3박자  ](#레슨)
 
 
 # 레슨1  
